{{$NEXT}}

1.182260  2018-08-14 22:08:47+00:00 UTC

    - Increment version no. to fix pause indexer error

0.1.2 2018-08-14T22:50:00

    - Update META with new github repo

    - Fix docs typos

0.1.1 2018-08-14T22:40:00

    - Renamed dist to DateTime-Calendar-TauStation

    - Added support for negative datetimes & durations

    - Refactor durations to not calculate relative to the catastrophe

0.1 2018-08-14T08:00:00

    - Initial release