@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Don't test second/unit accuracy
+
 1.182260  2018-08-14 22:08:47+00:00 UTC
 
     - Increment version no. to fix pause indexer error
